Harden persistent protection identity matching